add param in start task

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
     "build": "tsc",
-    "start": "node --experimental-modules ./dist/index.js"
+    "start": "node --experimental-modules --es-module-specifier-resolution=node ./dist/index.js"
   }
 }
