--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"lib": ["es5", "es6", "ES2018"],
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"module": "ES6",
+		"module": "es6",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowJs": true,
